# AnadiCSV

./: CONTRIBUTING.md  Dockerfile  Dockerfile_macos  LICENSE  README.md  TODO.md  anadi.sh  build_image.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: black_tool.yml  isort_tool.yml
anadi/: __main__.py  app.py  constants.py  csvdb.py
anadi/components/: conf_editor.py  csvtree.py  data_container.py  editor.py  settings.py  sql_editor.py
anadi/layouts/: horizontal_layout.tcss
anadi/modals/: history.py  quit.py  save_as.py
anadi/models/: confs.py  query_result.py
conf/: conf.json  main_conf.json
conf/csv/: confdb_49ghz.json  confdb_5ghz.json  defaultdb.json  pokemon.json
docker/: entrypoint.sh
files/: ._duckdb-1.1.1-cp312-cp312-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl
layouts/: editor.tcss  horizontal_layout.tcss
scripts/: utils.sh
