[tool.poetry]
name = "AnadiCSV"
version = "0.1.0"
description = "Query CSV files from your terminal."
authors = ["Alessandro Pischedda <alessandro.pischedda@gmail.com>"]
license = "MIT"
# homepage = ""
# repository = ""
readme = "README.md"
keywords = ["csv", "sql", "query"]
packages = [
    { include = "anadi"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0.0"

# textual and component libraries
textual = "==0.75.0"
pydantic = "==2.8.2"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.8"
mypy = "^1.11.2"
pre-commit = "^3.8.0"

[tool.poe.tasks]
ruff = "ruff check anadi"
black = "black anadi"
isort = "isort --settings-path .isort.cfg anadi"
mypy = "mypy --config-file mypy.ini anadi"
black-check = "black --check anadi"
isort-check = "isort --settings-path .isort.cfg --check-only anadi"

format = ["black", "isort"]
lint = ["ruff", "mypy", "black-check", "isort-check"]
pre-commit = "pre-commit"

[tool.poetry.scripts]
anadi = "anadi.__main__:run"
